--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
     "trailingComma": "es5",
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
-    "arrowParens": "avoid",
+    "arrowParents": "avoid",
     "proseWrap": "always",
     "ignore": ["node_modules", "dist"],
     "overrides": [
